--- a/ui/pages/MainPage.xaml
+++ b/ui/pages/MainPage.xaml
@@ -8,7 +8,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage">
 
-    <Grid>
-        <Button>123</Button>
+    <Grid Height="Auto" Width="Auto">
+        <Button Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="200,145,200,255" >Play</Button>
+        <Button Height="50px" Width="400px" Background="Orange" FontSize="20" >Settings</Button>
+        <Button Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="200,255,200,145">Quit</Button>
     </Grid>
 </Page>
