--- a/ui/pages/GamePage.xaml
+++ b/ui/pages/GamePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Memory.ui.pages.MainPage"
+﻿<Page x:Class="Memory.ui.pages.GamePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:Memory.ui.pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainPage">
+      Title="GamePage">
 
     <Grid>
-        
+        <Grid x:Name="_CardBox"></Grid>
     </Grid>
 </Page>
