--- a/ui/pages/ScoreboardPage.xaml
+++ b/ui/pages/ScoreboardPage.xaml
@@ -1,12 +1,7 @@
 ﻿<Page x:Class="Memory.ui.pages.ScoreboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Memory.ui.pages"
-      mc:Ignorable="d"
-      Title="ScoreboardPage" Height="450" Width="800">
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
-        
+        <TextBox>Hallo dit is de scoreboard</TextBox>
     </Grid>
 </Page>
