--- a/ui/MainWindow.xaml
+++ b/ui/MainWindow.xaml
@@ -1,13 +1,10 @@
 ﻿<Window x:Class="Memory.ui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
         Title="Memory"
         WindowState="Maximized"
         WindowStyle="None">
     <Grid>
-        <Frame NavigationUIVisibility="Hidden" x:Name="_UIFrame" />
+        <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" />
     </Grid>
 </Window>
