--- a/ui/pages/GamePage.xaml
+++ b/ui/pages/GamePage.xaml
@@ -1,14 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.GamePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Memory.ui.pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="GamePage">
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid>
-        <Grid x:Name="_CardBox"></Grid>
+        <Grid x:Name="_CardBox" />
     </Grid>
 </Page>
