--- a/ui/pages/MainPage.xaml
+++ b/ui/pages/MainPage.xaml
@@ -1,7 +1,6 @@
 ﻿<Page x:Class="Memory.ui.pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="MainPage">
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid>
         <Button Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,145,0,255">Play</Button>
