--- a/ui/pages/MainPage.xaml
+++ b/ui/pages/MainPage.xaml
@@ -1,9 +1,9 @@
 ﻿<Page x:Class="Memory.ui.pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
     <Grid>
-        <Button Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,145,0,255">Play</Button>
+
+        <Button Click="Play" Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,145,0,255">Play</Button>
         <Button Click="Scoreboard" Height="50px" Width="400px" Background="Orange" FontSize="20">Scoreboard</Button>
         <Button Click="Settings" Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,255,0,145">Settings</Button>
         <Button Click="Quit" Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,365,0,145">Quit</Button>
