Added escape menu page files

--- a/ui/MainWindow.xaml
+++ b/ui/MainWindow.xaml
@@ -4,7 +4,7 @@
         Title="Memory"
         WindowState="Maximized"
         WindowStyle="None"
-        PreviewKeyDown="EscapeMenu">
+        PreviewKeyUp="EscapeMenu">
     <Grid x:Name="mainGrid">
         <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" />
     </Grid>
