--- a/ui/pages/ScoreboardPage.xaml
+++ b/ui/pages/ScoreboardPage.xaml
@@ -7,6 +7,6 @@
       mc:Ignorable="d"
       Title="ScoreboardPage" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock>Hallo</TextBlock>
     </Grid>
 </Page>
