--- a/ui/pages/EscapeMenuPage.xaml
+++ b/ui/pages/EscapeMenuPage.xaml
@@ -4,8 +4,8 @@
       Background="Transparent">
     <Grid>
         <Button Click="Continue" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,200">Continue</Button>
-        <Button Click="Continue" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,100">Settings</Button>
-        <Button Click="Continue" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,0">Menu</Button>
+        <Button Click="Settings" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,100">Settings</Button>
+        <Button Click="Menu" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,0">Menu</Button>
         <Button Click="Quit" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,100,0,0">Quit</Button>
     </Grid>
 </Page>
