--- a/ui/pages/GamePage.xaml
+++ b/ui/pages/GamePage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.GamePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="Game">
 
     <Grid>
         <Grid x:Name="CardBox" />
