--- a/ui/pages/GamePage.xaml
+++ b/ui/pages/GamePage.xaml
@@ -3,7 +3,5 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Background="Transparent">
 
-    <Grid>
-        <Grid x:Name="CardBox" />
-    </Grid>
+    <Grid x:Name="CardBox"></Grid>
 </Page>
