--- a/ui/pages/SettingsPage.xaml
+++ b/ui/pages/SettingsPage.xaml
@@ -1,8 +1,27 @@
-﻿<Page x:Class="Memory.ui.pages.SettingsPage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
-    <Grid>
-        <TextBox>Hallo dit is de settings page</TextBox>
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Memory.ui.pages.SettingsPage"
+      Background="Transparent" d:DesignWidth="800.8" d:DesignHeight="649.2" Height="563" Width="400">
+    <Grid Margin="0,0,0,10.2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="79*"/>
+        </Grid.ColumnDefinitions>
+        <Button Content="&#xD;&#xA;Back" Grid.Column="1" HorizontalAlignment="Left" Margin="41.6,458,0,0" VerticalAlignment="Top" Width="75" Height="50" Background="Orange" Click="Button_Click_1"/>
+        <Button Content="&#xD;&#xA;Music" Grid.Column="1" HorizontalAlignment="Left" Margin="260.6,458,0,0" VerticalAlignment="Top" Width="75" Height="50" Click="Button_Click" Background="Orange"/>
+        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="50" Margin="0,76,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="5.2,83,0,0" TextWrapping="Wrap" Text="Thema" VerticalAlignment="Top" Width="375" TextAlignment="Center"/>
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="329.2,89,0,0" VerticalAlignment="Top" Width="28" Height="31"/>
+        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="117" Margin="0,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
+        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="108" Margin="10.2,131,0,0" VerticalAlignment="Top" Width="370">
+            <ListBoxItem Background="Orange" Height="20" Width="350"/>
+            <ListBoxItem Background="Orange" Height="20" Width="350"/>
+            <ListBoxItem Background="Orange" Height="20" Width="350"/>
+            <ListBoxItem Background="Orange" Height="20" Width="350"/>
+            <ListBoxItem Background="Orange" Height="20" Width="350"/>
+            
+            
+        </ListBox>
     </Grid>
 </Page>
