--- a/ui/pages/SettingsPage.xaml
+++ b/ui/pages/SettingsPage.xaml
@@ -9,18 +9,26 @@
             <ColumnDefinition Width="79*"/>
         </Grid.ColumnDefinitions>
         <Button Content="&#xD;&#xA;Back" Grid.Column="1" HorizontalAlignment="Left" Margin="41.6,458,0,0" VerticalAlignment="Top" Width="75" Height="50" Background="Orange" Click="Button_Click_1"/>
-        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="50" Margin="0,76,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="5.2,83,0,0" TextWrapping="Wrap" Text="Thema" VerticalAlignment="Top" Width="375" TextAlignment="Center"/>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="329.2,89,0,0" VerticalAlignment="Top" Width="28" Height="31"/>
-        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="117" Margin="0,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
-        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="108" Margin="10.2,131,0,0" VerticalAlignment="Top" Width="370">
+        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="50" Margin="0,76,0,0" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2" Stroke="Black"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="5.2,83,0,0" TextWrapping="Wrap" Text="Thema's" VerticalAlignment="Top" Width="375" TextAlignment="Center" Background="Orange" Foreground="Black" SelectionBrush="{x:Null}" SelectionTextBrush="{x:Null}" BorderBrush="{x:Null}"/>
+        <Button Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="343.2,83,0,0" VerticalAlignment="Top" Width="37" Height="37" Foreground="{x:Null}">
+            <Button.Background>
+                <ImageBrush Stretch="Fill" ImageSource="UpSettingsDrop - 2.png"/>
+            </Button.Background>
+            <Button.BorderBrush>
+                <ImageBrush/>
+            </Button.BorderBrush>
+        </Button>
+        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="122" Margin="0,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
+        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="105" Margin="10.2,139,0,0" VerticalAlignment="Top" Width="370" Background="Black" BorderBrush="{x:Null}">
+            <ListBoxItem Background="Orange" Height="20" Width="350" Selected="ListBoxItem_Selected"/>
             <ListBoxItem Background="Orange" Height="20" Width="350"/>
             <ListBoxItem Background="Orange" Height="20" Width="350"/>
             <ListBoxItem Background="Orange" Height="20" Width="350"/>
             <ListBoxItem Background="Orange" Height="20" Width="350"/>
-            <ListBoxItem Background="Orange" Height="20" Width="350"/>
-            
-            
+
+
         </ListBox>
+        <Local:UserControl></Local:UserControl>
     </Grid>
 </Page>
