--- a/ui/pages/PreGame.xaml
+++ b/ui/pages/PreGame.xaml
@@ -24,7 +24,7 @@
         </CheckBox>
 
         <Button Click="BattleRobot" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 0">Battle Robot</Button>
-        <Button Height="50" Width="200" Background="Orange" FontSize="20">Single player</Button>
+        <Button Height="50" Width="200" Background="Orange" FontSize="20">Local Multiplayer</Button>
         <Button Height="50" Width="200" Background="Orange" FontSize="20" Margin="410 0 0 0">Multiplayer</Button>
     </Grid>
 </Page>
