--- a/ui/pages/SettingsPage.xaml
+++ b/ui/pages/SettingsPage.xaml
@@ -8,9 +8,9 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="79*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="&#xD;&#xA;Back" Grid.Column="1" HorizontalAlignment="Left" Margin="41.6,458,0,0" VerticalAlignment="Top" Width="75" Height="50" Background="Orange" Click="Button_Click_1"/>
+        <Button Content="Back" Grid.Column="1" HorizontalAlignment="Left" Margin="41.6,458,0,0" VerticalAlignment="Top" Width="75" Height="50" Background="Orange" Click="Button_Click_1" FontSize="20"/>
         <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="50" Margin="0,76,0,0" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2" Stroke="Black"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="5.2,83,0,0" TextWrapping="Wrap" Text="Thema's" VerticalAlignment="Top" Width="375" TextAlignment="Center" Background="Orange" Foreground="Black" SelectionBrush="{x:Null}" SelectionTextBrush="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="5.2,83,0,0" TextWrapping="Wrap" Text="Themes:" VerticalAlignment="Top" Width="375" TextAlignment="Center" Background="Orange" Foreground="Black" SelectionBrush="{x:Null}" SelectionTextBrush="{x:Null}" BorderBrush="{x:Null}" TextChanged="TextBox_TextChanged_1" FontSize="20"/>
         <Button x:Name="Collapse" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="343.2,83,0,0" VerticalAlignment="Top" Width="37" Height="37">
             <Button.Foreground>
                 <ImageBrush ImageSource="DownSettingsDrop - 2 - kopie.png"/>
@@ -22,12 +22,11 @@
                 <ImageBrush/>
             </Button.BorderBrush>
         </Button>
-        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="106" Margin="0,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
-        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="89" Margin="10.2,139,0,0" VerticalAlignment="Top" Width="370" Background="Black" BorderBrush="{x:Null}" Foreground="{x:Null}">
-            <ListBoxItem Background="Orange" Height="20" Width="350" Selected="ListBoxItem_Selected" BorderBrush="{x:Null}"/>
-            <ListBoxItem Background="Orange" Height="20" Width="350" BorderBrush="{x:Null}"/>
-            <ListBoxItem Background="Orange" Height="20" Width="350" BorderBrush="{x:Null}"/>
-            <ListBoxItem Background="Orange" Height="20" Width="350" BorderBrush="{x:Null}"/>
+        <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="175" Margin="0,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
+        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="159" Margin="10.2,139,0,0" VerticalAlignment="Top" Width="370" Background="Black" BorderBrush="{x:Null}" Foreground="{x:Null}">
+            <ListBoxItem Background="Orange" Height="75" Width="350" Selected="ListBoxItem_Selected" BorderBrush="{x:Null}" Content="Man's best friends!" Foreground="Black" FontSize="20"/>
+            <ListBoxItem Background="Orange" Height="71" Width="350" BorderBrush="{x:Null}" Content="Outer space!" Foreground="Black" Selected="ListBoxItem_Selected_1" FontSize="20"/>
+
 
 
         </ListBox>
