--- a/ui/pages/PreGame.xaml
+++ b/ui/pages/PreGame.xaml
@@ -3,8 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Background="Transparent">
     <Grid>
-        <TextBox Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 200">Speler 1</TextBox>
-        <TextBox Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 0 200">Speler 2</TextBox>
+        <TextBox Name="PlayerOne" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 200">Speler 1</TextBox>
+        <TextBox Name="PlayerTwo" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 0 200">Speler 2</TextBox>
 
         <CheckBox x:Name="Four" Checked="FourByFour" Height="50" Width="200" Background="Orange" FontSize="20"
                   Margin="410 0 0 200">
@@ -22,5 +22,8 @@
         <Button Click="BattleRobot" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 0">Battle Robot</Button>
         <Button Click="MultiPlayer" Height="50" Width="200" Background="Orange" FontSize="20">Local Multiplayer</Button>
         <Button Click="Online" Height="50" Width="200" Background="Orange" FontSize="20" Margin="410 0 0 0">Multiplayer</Button>
+
+        <Button Click="LastGame" Height="50" Width="200" Background="Orange" FontSize="20" Margin="205 110 0 0">Vorig spel</Button>
+        <Button Click="Back" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 110 205 0">Terug</Button>
     </Grid>
 </Page>
