--- a/ui/pages/ScoreboardPage.xaml
+++ b/ui/pages/ScoreboardPage.xaml
@@ -3,17 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Memory.ui.pages"
       mc:Ignorable="d"
       Title="ScoreboardPage" Height="450" Width="800">
     <Grid>
-        <TextBlock FontSize="80" Foreground="Orange" Margin="0,0,0,0" TextAlignment="Center">
+        <TextBlock FontSize="80" Foreground="Orange" Margin="0,0,0,400" HorizontalAlignment="Center">
             Dit is het scoreboard
         </TextBlock>
 
         <FlowDocumentScrollViewer VerticalScrollBarVisibility="Hidden" IsToolBarVisible="False"
-                                  HorizontalAlignment="Center" VerticalAlignment="Center" Width="660" Height="500"
-                                  Grid.RowSpan="2">
+                                  HorizontalAlignment="Center" VerticalAlignment="Center" Width="660" Height="500">
             <FlowDocument>
                 <Table x:Name="Scoreboard">
                     <Table.Columns>
