--- a/ui/pages/ScoreboardPage.xaml
+++ b/ui/pages/ScoreboardPage.xaml
@@ -1,10 +1,7 @@
 ﻿<Page x:Class="Memory.ui.pages.ScoreboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      mc:Ignorable="d"
-      Title="ScoreboardPage" Height="450" Width="800">
+      Background="Transparent">
     <Grid>
         <TextBlock FontSize="80" Foreground="Orange" Margin="0,0,0,400" HorizontalAlignment="Center">
             Dit is het scoreboard
