Settings menu now doest not interup EscapeMenuPage.xaml
Signed-off-by: Rutger <32477913+LunkLoafGrumble@users.noreply.github.com>

--- a/ui/MainWindow.xaml
+++ b/ui/MainWindow.xaml
@@ -6,6 +6,7 @@
         WindowStyle="None"
         PreviewKeyUp="EscapeMenu">
     <Grid x:Name="mainGrid">
-        <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" />
+        <!-- <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" /> -->
+        <Frame x:Name="UiFrame" />
     </Grid>
 </Window>
