--- a/ui/pages/EscapeMenuPage.xaml
+++ b/ui/pages/EscapeMenuPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.EscapeMenuPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="EscapeMenu">
     <Grid>
         <Button Click="Continue" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,200">Continue</Button>
         <Button Click="Settings" Height="50px" Width="200px" Background="Orange" FontSize="20" Margin="0,0,0,100">Settings</Button>
