--- a/ui/pages/MainPage.xaml
+++ b/ui/pages/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="MainPage">
     <Grid>
         <Button Click="Play" Height="50px" Width="400px" Background="Orange" FontSize="20" Margin="0,145,0,255">Play</Button>
         <Button Click="Scoreboard" Height="50px" Width="400px" Background="Orange" FontSize="20">Scoreboard</Button>
