--- a/ui/pages/PreGame.xaml
+++ b/ui/pages/PreGame.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.PreGame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="PreGame">
     <Grid>
         <TextBox Name="PlayerOne" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 200">Speler 1</TextBox>
         <TextBox Name="PlayerTwo" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 0 200">Speler 2</TextBox>
