--- a/ui/pages/ScoreboardPage.xaml
+++ b/ui/pages/ScoreboardPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.ScoreboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="Scoreboard">
     <Grid>
         <TextBlock FontSize="80" Foreground="Orange" Margin="0,0,0,400" HorizontalAlignment="Center">
             Dit is het scoreboard
