--- a/ui/pages/SettingsPage.xaml
+++ b/ui/pages/SettingsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="Memory.ui.pages.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="Transparent">
+      Background="Transparent"
+      Title="Settings">
     <Grid>
         <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Margin="0,0,0,500">Thema's</Label>
         <Button x:Name="Dogs" Click="ThemeDogs" Height="50px" Width="400px" Background="Orange" FontSize="20"
