--- a/ui/MainWindow.xaml
+++ b/ui/MainWindow.xaml
@@ -6,7 +6,6 @@
         WindowStyle="None"
         PreviewKeyUp="EscapeMenu">
     <Grid x:Name="mainGrid">
-        <!-- <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" /> -->
-        <Frame x:Name="UiFrame" />
+        <Frame NavigationUIVisibility="Hidden" x:Name="UiFrame" />
     </Grid>
 </Window>
