--- a/ui/pages/PreGame.xaml
+++ b/ui/pages/PreGame.xaml
@@ -22,7 +22,7 @@
 
         <Button Click="BattleRobot" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 0 410 0">Battle Robot</Button>
         <Button Click="MultiPlayer" Height="50" Width="200" Background="Orange" FontSize="20">Local Multiplayer</Button>
-        <Button Click="Online" Height="50" Width="200" Background="Orange" FontSize="20" Margin="410 0 0 0">Multiplayer</Button>
+        <Button Click="Online" Height="50" Width="200" Background="Gray" FontSize="20" Margin="410 0 0 0">Multiplayer</Button>
 
         <Button Click="LastGame" Height="50" Width="200" Background="Orange" FontSize="20" Margin="205 110 0 0">Vorig spel</Button>
         <Button Click="Back" Height="50" Width="200" Background="Orange" FontSize="20" Margin="0 110 205 0">Terug</Button>
